--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Sora&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Sora", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.item-button button {
+  margin-top: 20px;
+  width: 200px;
+  background-color: rgb(34, 78, 9);
+  color: white;
 }
